--- a/Angular/SocialNetwork/angular.json
+++ b/Angular/SocialNetwork/angular.json
@@ -117,8 +117,18 @@
               "devServerTarget": "SocialNetwork:serve:production"
             }
           }
+        },
+        "deploy": {
+          "builder": "@jefiozie/ngx-aws-deploy:deploy",
+          "options": {
+            "region": "us-east-2",
+            "bucket": "project-buckett",
+            "secretAccessKey": "NC5uojU5lx5aHXarH7GEwkXoAIEhkZ6krztSm4Sw",
+            "accessKeyId": "AKIA3NK2HE44B7VYVDVS"
+          }
         }
       }
-    }},
+    }
+  },
   "defaultProject": "SocialNetwork"
 }
